Timeline interval param incorporated (#15)
