# ejb/src/main/java/io/whalebone/publicapi/ejb/dto/EDnsBucketInterval.java
@@ -1,0 +1,7 @@
+package io.whalebone.publicapi.ejb.dto;
+
+public enum EDnsBucketInterval {
+    HOUR,
+    DAY,
+    WEEK;
+}
