# rest/src/main/java/io/whalebone/publicapi/rest/endpoint/AbstractDnsEndpoint.java
@@ -1,7 +1,9 @@
 package io.whalebone.publicapi.rest.endpoint;
 
+import io.whalebone.publicapi.ejb.dto.EDnsBucketInterval;
 import io.whalebone.publicapi.ejb.dto.EDnsQueryType;
 import io.whalebone.publicapi.ejb.dto.aggregate.EDnsAggregate;
+import io.whalebone.publicapi.ejb.dto.aggregate.EDnsSecAggregate;
 import io.whalebone.publicapi.rest.EnumParamUtils;
 import io.whalebone.publicapi.rest.validation.EnumValue;
 import io.whalebone.publicapi.rest.validation.RangedInteger;
@@ -11,6 +13,7 @@ import javax.ws.rs.QueryParam;
 
 public abstract class AbstractDnsEndpoint extends AbstractEndpoint {
     private static final long serialVersionUID = 2744945027050689603L;
+    private static final EDnsBucketInterval DEFAULT_INTERVAL = EDnsBucketInterval.HOUR;
 
     @QueryParam("query_type")
     private String queryTypeParam;
@@ -20,6 +23,8 @@ public abstract class AbstractDnsEndpoint extends AbstractEndpoint {
     private String tld;
     @QueryParam("query")
     private String query;
+    @QueryParam("interval")
+    private String intervalParam;
 
     public void setQueryTypeParam(String typeParam) {
         this.queryTypeParam = typeParam;
@@ -61,6 +66,23 @@ public abstract class AbstractDnsEndpoint extends AbstractEndpoint {
             return EnumParamUtils.getEnumValue(EDnsQueryType.class, queryTypeParam);
         } else {
             return null;
+        }
+    }
+
+    @EnumValue(EDnsBucketInterval.class)
+    public String getIntervalParam() {
+        return intervalParam;
+    }
+
+    public void setIntervalParam(String intervalParam) {
+        this.intervalParam = intervalParam;
+    }
+
+    public EDnsBucketInterval getInterval() {
+        if (StringUtils.isNotBlank(intervalParam)) {
+            return EnumParamUtils.getEnumValue(EDnsBucketInterval.class, intervalParam);
+        } else {
+            return DEFAULT_INTERVAL;
         }
     }
 
