# rest/src/main/java/io/whalebone/publicapi/rest/endpoint/DnsEndpoint.java
@@ -76,6 +76,7 @@ public class DnsEndpoint extends AbstractDnsEndpoint {
                 .domain(getDomain())
                 .resolverId(getResolverId())
                 .tld(getTld())
+                .interval(getInterval())
                 .build();
 
         List<DnsTimeBucketDTO> dnsRecords = publicApiService.dnsTimeline(criteria);
